test/types/string/dmk/oobbyte2.good
oobbyte2.chpl:1: error: index out of bounds of string: 2
