test/types/string/dmk/oobbyte2.chpl
writeln("A".byte(2));
